Build out the rest of the portfolio page

--- a/styles.css
+++ b/styles.css
@@ -15,29 +15,31 @@ video {
     width: auto;
 }
 
+
 /* SECTION SIZES */
 .one {
     width: 100%;
     height: 100vh;
-    border-bottom: 1px solid white;
 }
 
 .two {
     width: 100%;
     height: 100vh;
-    border-bottom: 1px solid white;
 }
 
 .three {
     width: 100%;
     height: 100vh;
-    border-bottom: 1px solid white;
 }
 
 .four {
     width: 100%;
     height: 100vh;
-    border-bottom: 1px solid white;
+}
+
+.five {
+    width: 100%;
+    height: 100vh;
 }
 
 
@@ -56,63 +58,50 @@ video {
     }
 }
 
-#sec2, #sec3 {
+#abt, #skl, #proj, #con {
     scroll-margin-top: 90px;
+}
+
+.scroll-2 span, .scroll-3 span, .scroll-4 span, .scroll-5 span {
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-bottom: 1px solid #e5daa4;
+    border-right: 1px solid #e5daa4;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: scroll 2s infinite;
 }
 
 .scroll-2 {
     position: absolute;
-    top: 90%;
+    top: 93%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.scroll-2 span {
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 1px solid #e5daa4;
-    border-right: 1px solid #e5daa4;
-    transform: rotate(45deg);
-    margin: -10px;
-    animation: scroll 2s infinite;
 }
 
 .scroll-3 {
     position: absolute;
-    top: 210%;
+    top: 213.6%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.scroll-3 span {
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 1px solid #e5daa4;
-    border-right: 1px solid #e5daa4;
-    transform: rotate(45deg);
-    margin: -10px;
-    animation: scroll 2s infinite;
 }
 
 .scroll-4 {
     position: absolute;
-    top: 317%;
+    top: 320.1%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.scroll-4 span {
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 1px solid #e5daa4;
-    border-right: 1px solid #e5daa4;
-    transform: rotate(45deg);
-    margin: -10px;
-    animation: scroll 2s infinite;
+.scroll-5 {
+    position: absolute;
+    top: 445.75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+
 
 /* NAV BAR */
 .navbar {
@@ -139,6 +128,10 @@ video {
     gap: 20px;
     margin-top: 30px;
     margin-right: 20px;
+}
+
+.links a {
+    text-decoration: none;
 }
 
 
@@ -284,4 +277,340 @@ video {
     text-align: center;
     font-size: 20px;
     margin-top: 40px;
+}
+
+
+/* PROJECT SECTION */
+.four h3 {
+    font-size: 75px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+
+.project-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+
+.project-container a {
+    text-decoration: none;
+}
+
+.project img {
+    width: 500px;
+    height: auto;
+    border-radius: 10px;
+    border: 1.5px solid #e5daa4;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+
+.project figcaption {
+    margin-top: 25px;
+    text-align: center;
+    font-size: 25px;
+}
+
+.project:hover img {
+    -webkit-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+
+/* CONTACT SECTION */
+.five {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.five h3 {
+    font-size: 75px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.msg-container {
+    background-color: #e9ddbb;
+    height: 47vh;
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
+.msg-container h5 {
+    font-size: 38px;
+    color: #181510;
+    background-color: #e9ddbb;
+    margin-left: -600px;
+    margin-top: 5px;
+}
+
+.form-container {
+    margin-top: -50px;
+}
+
+#dk {
+    background-color: #e9ddbb;
+}
+
+.msg, .email, .name {
+    background-color: #e9ddbb;
+}
+
+#dk figcaption {
+    color: #181510;
+    font-size: 19px;
+    font-weight: 500;
+    padding-bottom: 8px;
+}
+
+.row-one {
+    display: flex;
+    gap: 50px;
+}
+
+.name {
+    width: 300px;
+    font-size: 18px;
+}
+
+.name-cont input[type="name"] {
+    color: #7b7a79;
+    padding: 4px;
+    border: none;
+    border-bottom: 1.5px solid #181510;
+}
+
+.email {
+    width: 400px;
+    font-size: 18px;
+}
+
+.email-cont input[type="email"] {
+    color: #7b7a79;
+    padding: 4px;
+    border: none;
+    border-bottom: 1.5px solid #181510;
+}
+
+.row-two {
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.msg {
+    width: 759px;
+    font-size: 18px;
+}
+
+.row-two input[type="text"] {
+    color: #7b7a79;
+    padding: 4px;
+    border: none;
+    border-bottom: 1.5px solid #181510;
+    padding-top: 25px;
+}
+
+#thx {
+    background-color: #e9ddbb;
+    color: #7b7a79;
+    margin-left: -450px;
+    height: 3vh;
+    width: 25vw;
+    margin-top: -50px;
+    padding-bottom: 5px;
+}
+
+.row-three {
+    display: flex;
+    justify-content: end;
+    color: #181510;
+    padding-top: 40px;
+    margin-right: -25px;
+}
+
+.row-three button[type="submit"] {
+    font-size: 19.5px;
+    padding: 8px 16px;
+    border: 1.5px solid #181510;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.row-three button[type="submit"]:hover {
+    color: #d3d3d3;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 100px;
+    padding: 10px;
+    margin-top: 2px;
+    text-align: center;
+}
+
+.icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.icon figcaption {
+    padding-top: 10px;
+}
+
+.icon a {
+    text-decoration: none;
+}
+
+.icon button {
+    border: none;
+    cursor: pointer;
+    margin-bottom: -2px;
+}
+
+
+/* POP-UP */
+.popup {
+    width: 888px;
+    height: 100px;
+    display: none;
+    position: relative;
+    top: 1%;
+    left: -1.6%;
+}
+
+.popup-form {
+    width: 888px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    background-color: #e9ddbb;
+}
+
+.pop-container {
+    width: 888px;
+    height: 100px;
+    display: flex;
+    background-color: #e9ddbb;
+    padding: 5px 25px;
+    padding-bottom: 20px;
+    gap: 30px;
+}
+
+.pop {
+    padding: 5px;
+    margin-left: 5px;
+    margin-top: 15px;
+}
+
+.pop-name {
+    width: 200px;
+    font-size: 13px;
+}
+
+.pop-work {
+    width: 175px;
+    font-size: 13px;
+}
+
+.pop-email {
+    width: 275px;
+    font-size: 13px;
+}
+
+.pop input[type="name"], .pop input[type="email"], .pop input[type="text"] {
+    color: #7b7a79;
+    background-color: #e9ddbb;
+    padding: 4px;
+    border: none;
+    border-bottom: 1.5px solid #181510;
+}
+
+.pop figcaption {
+    color: #181510;
+    font-size: 10px;
+    font-weight: 500;
+    padding-bottom: 8px;
+    background-color: #e9ddbb;
+}
+
+.pop-btns button[type="button"] {
+    background-color: #e9ddbb;
+    border: none;
+    cursor: pointer;
+    width: 20px;
+}
+
+.close {
+    margin-top: -10px;
+}
+
+.close i {
+    background-color: #e9ddbb;
+    color: #181510;
+}
+
+.pop-btns {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 20px;
+    background-color: #e9ddbb;
+    padding: 10px 20px;
+}
+
+.pop-btns button[type="submit"] {
+    font-size: 12px;
+    padding: 4px 8px;
+    border: 1.5px solid #181510;
+    border-radius: 2px;
+    cursor: pointer;
+    height: 35px;
+}
+
+.pop-btns button[type="submit"]:hover {
+    color: #d3d3d3;
+}
+
+.pop-btns i:hover{
+    color: #7b7a79;
+}
+
+.popspan {
+    background-color: #e9ddbb;
+    margin-top: -35px;
+    padding: 5px 35px;
+    width: 868px;
+    height: 20px;
+}
+
+#resume {
+    background-color: #e9ddbb;
+    color: #7b7a79;
+    font-size: 12px;
+}
+
+/* FOOTER */
+.foot {
+    height: 75px;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
