--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css');
+
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,400;0,500;1,100&display=swap');
+
+body, h1, h2, h3, p, ul, li, a, button, input, textarea {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
 
 * {
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -16,95 +25,16 @@ video {
 }
 
 
-/* SECTION SIZES */
-.one {
-    width: 100%;
-    height: 100vh;
-}
-
-.two {
-    width: 100%;
-    height: 100vh;
-}
-
-.three {
-    width: 100%;
-    height: 100vh;
-}
-
-.four {
-    width: 100%;
-    height: 100vh;
-}
-
-.five {
-    width: 100%;
-    height: 100vh;
-}
-
-
-/* SCROLL BUTTONS */
-@keyframes scroll {
-    0% {
-        opacity: 1;
-        transform: rotate(45deg) translate(-5px, -5px);
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: .5;
-        transform: rotate(45deg) translate(5px, 5px);
-    }
-}
-
-#abt, #skl, #proj, #con {
-    scroll-margin-top: 90px;
-}
-
-.scroll-2 span, .scroll-3 span, .scroll-4 span, .scroll-5 span {
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-bottom: 1px solid #e5daa4;
-    border-right: 1px solid #e5daa4;
-    transform: rotate(45deg);
-    margin: -10px;
-    animation: scroll 2s infinite;
-}
-
-.scroll-2 {
-    position: absolute;
-    top: 93%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.scroll-3 {
-    position: absolute;
-    top: 213.6%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.scroll-4 {
-    position: absolute;
-    top: 320.1%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.scroll-5 {
-    position: absolute;
-    top: 445.75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-
-
 /* NAV BAR */
-.navbar {
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     position: fixed;
@@ -118,59 +48,76 @@ video {
     padding: 5px;
 }
 
-.links ul {
+.nav-links {
     color: #e5daa4;
     font-size: 20px;
     font-weight: 100px;
     display: flex;
+    align-items: flex-end;
     list-style: none;
-    padding: 5px;
     gap: 20px;
-    margin-top: 30px;
-    margin-right: 20px;
+    margin-bottom: 30px;
+    padding-right: 20px;
 }
 
-.links a {
+.nav-links a {
     text-decoration: none;
+}
+
+
+/* NAV BAR SMALL SCREEN */
+@media (max-width: 768px) {
+    .nav-links {
+        font-size: 15px;
+    }
+
+    video {
+        height: 70px;
+        width: auto;
+    }
 }
 
 
 /* HERO */
 .hero {
+    height: 100vh;
+    position: relative;
+    z-index: 1;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 200px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap: 120px;
 }
 
 .hero img {
-    height: 400px;
+    height: 425px;
     width: auto;
-    margin-left: 100px;
-}
-
-.hero-img {
-    flex: 1 1 200px;
+    margin-top: -50px;
 }
 
 .hero-txt {
     display: flex;
     flex-direction: column;
-    margin-top: 80px;
-    margin-right: 100px;
-    flex: 1 1 200px;
+    margin-top: -125px;
 }
 
-.sav {
+.hero-txt h1 {
     font-size: 80px;
-    font-weight: 400px;
+    font-weight: 400;
 }
 
 
 /* TYPEWRITING TEXT */
 .type .dynamic-txts{
-    margin-top: -2px;
-    margin-left: -35px;
+    margin-top: 1px;
     height: 90px;
     width: 400px;
     line-height: 90px;
@@ -220,46 +167,147 @@ video {
 }
 
 
+/* HERO SMALL SCREEN */
+@media (max-width: 768px) {
+   .hero-content {
+        flex-direction: column;
+        text-align: center;
+        padding: 20px;
+        gap: 20px;
+    }
+
+    .hero img {
+        height: auto;
+        max-width: 80%;
+        margin-top: 100px;
+    }
+
+    .hero-txt {
+        margin-top: 20px;
+    }
+
+    .hero-txt h1 {
+        font-size: 40px;
+    }
+}
+
+
 /* ABOUT SECTION */
-.about img {
-    height: 475px;
-    width: auto;
-    margin-left: 40px;
-    margin-right: 25px;
-    margin-top: 80px;
-}
-
 .about {
-    display: flex;
-    flex-direction: row;
-    margin-top: 50px;
-}
-
-.about-container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    margin-left: 90px;
-    margin-right: 75px;
+    align-items: center;
+}
+
+.about-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 100px;
+    max-width: 98vw;
+    margin-top: 100px;
+    padding: 50px;
+}
+
+.about-txt {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    min-width: 400px;
 }
 
 .about h3 {
     font-size: 75px;
     font-weight: 400;
+    padding-bottom: 20px;
 }
 
-.about-txt {
-    margin-top: -45px;
+.about p {
     font-size: 18px;
-    width: 600px;
+    max-width: 605px;
+}
+
+.about-pic {
+    max-width: 550px;
+}
+
+.about-pic img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* ABOUT SMALL SCREEN */
+@media (max-width: 768px) {
+    .about {
+        margin-top: -100px;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .about-content {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 25px;
+    }
+
+    .about-txt {
+        flex: none;
+        max-width: 100%;
+    }
+
+    .about h3 {
+        font-size: 36px;
+    }
+
+    .about p {
+        font-size: 14px;
+    }
+
+    .about-pic img {
+        height: auto;
+        max-width: 80%;
+        margin-left: 50px;
+    }
 }
 
 
 /* SKILLS SECTION */
-.skills, .learning {
+.skills {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 25px;
+}
+
+.skill-container, .learn-container {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.skill-container {
+    padding-bottom: 15px;
+}
+
+.skills h3 {
     font-size: 75px;
     font-weight: 400;
-    text-align: center;
-    margin-top: 50px;
+    padding-bottom: 20px;
 }
 
 .skill img, .learn img {
@@ -267,8 +315,8 @@ video {
     width: auto;
 }
 
-.skill div, .learn div {
-    margin-top: 15px;
+.skill figcaption, .learn figcaption {
+    margin-top: 10px;
 }
 
 .img-container {
@@ -280,13 +328,50 @@ video {
 }
 
 
+/* SKILLS SMALL SCREEN */
+@media (max-width: 768px) {
+    .skills {
+        padding: 20px;
+        margin-top: 105px;
+    }
+
+    .skills h3 {
+        font-size: 40px;
+    }
+
+    .skill-container {
+        gap: 30px;
+    }
+
+    .skill img, .learn img {
+        height: 60px;
+    }
+}
+
+
 /* PROJECT SECTION */
-.four h3 {
+.projects {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.project-content {
+    margin-top: 125px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.project-content h3 {
     font-size: 75px;
     font-weight: 400;
     text-align: center;
-    margin-top: 200px;
-    margin-bottom: 100px;
+    padding-bottom: 50px;
 }
 
 .project-container {
@@ -294,6 +379,7 @@ video {
     justify-content: center;
     align-items: center;
     gap: 100px;
+    padding: 50px;
 }
 
 .project-container a {
@@ -312,7 +398,7 @@ video {
 }
 
 .project figcaption {
-    margin-top: 25px;
+    margin-top: 30px;
     text-align: center;
     font-size: 25px;
 }
@@ -323,14 +409,47 @@ video {
 }
 
 
+/* PROJECT SMALL SCREEN */
+@media (max-width: 768px) {
+    .projects {
+        margin-top: -30px;
+        text-align: center;
+    }
+
+    .project-content {
+        margin-top: -20px;
+    }
+
+    .project-content h3 {
+        font-size: 40px;
+        padding-bottom: 0px;
+    }
+
+    .project-container {
+        flex-direction: column; 
+        gap: 40px;
+    }
+
+    .project img {
+        width: 90%;
+        max-width: 400px; 
+    }
+
+    .project figcaption {
+        font-size: 20px;
+    }
+}
+
+
 /* CONTACT SECTION */
-.five {
+.contact {
+    height: 95vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.five h3 {
+.contact h3 {
     font-size: 75px;
     font-weight: 400;
     text-align: center;
@@ -340,33 +459,39 @@ video {
 
 .msg-container {
     background-color: #e9ddbb;
-    height: 47vh;
-    width: 60vw;
+    height: 45vh;
+    width: 80%;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 30px;
+    position: relative;
+    overflow-y: auto;
+    padding: 20px;
 }
 
 .msg-container h5 {
     font-size: 38px;
     color: #181510;
     background-color: #e9ddbb;
-    margin-left: -600px;
-    margin-top: 5px;
+    align-self: flex-start;
+    margin: 5px 15px;
 }
 
 .form-container {
-    margin-top: -50px;
+    background-color: #e9ddbb;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-#dk {
-    background-color: #e9ddbb;
-}
-
-.msg, .email, .name {
-    background-color: #e9ddbb;
+.msg, .email, .name, #dk {
+    background-color: transparent;
 }
 
 #dk figcaption {
@@ -378,11 +503,21 @@ video {
 
 .row-one {
     display: flex;
-    gap: 50px;
+    gap: 285px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90%;
+    padding: 40px;
+}
+
+.name-cont {
+    padding-left: 10px;
 }
 
 .name {
-    width: 300px;
+    position: absolute;
+    width: 32%;
     font-size: 18px;
 }
 
@@ -394,7 +529,8 @@ video {
 }
 
 .email {
-    width: 400px;
+    position: absolute;
+    width: 47%;
     font-size: 18px;
 }
 
@@ -408,38 +544,53 @@ video {
 .row-two {
     display: flex;
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 60px;
+    position: absolute;
+    top: 35%;
+    left: 0;
+    width: 90%;
+    padding: 40px;
 }
 
+
 .msg {
-    width: 759px;
+    position: absolute;
+    width: 88%;
     font-size: 18px;
+    margin-left: 10px;
+}
+
+.row-two figcaption {
+    padding-left: 10px;
 }
 
 .row-two input[type="text"] {
     color: #7b7a79;
     padding: 4px;
+    padding-top: 15px;
     border: none;
     border-bottom: 1.5px solid #181510;
-    padding-top: 25px;
+    margin-top: 30px;
 }
 
 #thx {
     background-color: #e9ddbb;
     color: #7b7a79;
-    margin-left: -450px;
-    height: 3vh;
-    width: 25vw;
-    margin-top: -50px;
-    padding-bottom: 5px;
+    position: absolute;
+    top: 90%;
+    left: 6%;
 }
 
 .row-three {
     display: flex;
     justify-content: end;
     color: #181510;
-    padding-top: 40px;
-    margin-right: -25px;
+    position: absolute;
+    top: 80%;
+    left: 85%;
+    width: 10%;
+    padding: 20px;
+    margin-top: -10px;
 }
 
 .row-three button[type="submit"] {
@@ -454,7 +605,7 @@ video {
     color: #d3d3d3;
 }
 
-.icons {
+.social {
     display: flex;
     justify-content: space-evenly;
     gap: 100px;
@@ -467,11 +618,11 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
 }
 
 .icon figcaption {
     padding-top: 10px;
+    padding-bottom: 25px;
 }
 
 .icon a {
@@ -481,18 +632,107 @@ video {
 .icon button {
     border: none;
     cursor: pointer;
-    margin-bottom: -2px;
 }
+
+
+/* CONTACT SMALL SCREEN */
+@media (max-width: 768px) {
+    .contact h3 {
+        font-size: 40px;
+        padding-bottom: 0px;
+    }
+
+    .msg-container {
+        width: 90%;
+        height: 35vh;
+        max-width: none;
+        overflow: hidden;
+        padding: 10px;
+    }
+
+    .msg-container h5 {
+        font-size: 28px;
+    }
+
+    .form-container {
+        width: 90%;
+        max-width: 90%;
+        height: 100%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .row-one, .row-two, .row-three {
+        width: 100%;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .row-one {
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .name, .email {
+        flex: 1;
+        font-size: 14px;
+    }
+
+    .email-cont {
+        margin-left: -100px;
+    }
+
+    .row-two {
+        margin-top: 10px;
+    }
+
+    .row-two input[type="text"] {
+        padding-top: 8px;
+    }
+
+    .msg {
+        width: 99%;
+        font-size: 14px;
+    }
+
+    #thx {
+        font-size: 14px;
+        left: 1;
+        margin-left: -6px;
+    }
+
+    .row-three {
+        width: 10%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        margin-top: -8px;
+        margin-left: 12px;
+    }
+
+    .row-three button[type="submit"] {
+        font-size: 16px;
+        padding: 6px 12px;
+    }
+
+    .icon i {
+        font-size: 20px;
+    }
+}
+
 
 
 /* POP-UP */
 .popup {
     width: 888px;
     height: 100px;
-    display: none;
     position: relative;
-    top: 1%;
-    left: -1.6%;
+    top: -50px; 
+    left: 49%;
+    transform: translateX(-50%);
 }
 
 .popup-form {
@@ -505,18 +745,24 @@ video {
 
 .pop-container {
     width: 888px;
-    height: 100px;
+    height: 105px;
     display: flex;
     background-color: #e9ddbb;
     padding: 5px 25px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+    gap: 20px;
+}
+
+.pop-small {
+    display: flex;
+    background-color: transparent;
     gap: 30px;
 }
 
 .pop {
     padding: 5px;
     margin-left: 5px;
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 .pop-name {
@@ -542,9 +788,9 @@ video {
     border-bottom: 1.5px solid #181510;
 }
 
-.pop figcaption {
+#dk figcaption {
     color: #181510;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: 500;
     padding-bottom: 8px;
     background-color: #e9ddbb;
@@ -570,13 +816,13 @@ video {
     display: flex;
     flex-direction: column;
     align-items: end;
-    gap: 20px;
-    background-color: #e9ddbb;
-    padding: 10px 20px;
+    gap: 30px;
+    background-color: transparent;
+    padding: 10px 30px;
 }
 
 .pop-btns button[type="submit"] {
-    font-size: 12px;
+    font-size: 14px;
     padding: 4px 8px;
     border: 1.5px solid #181510;
     border-radius: 2px;
@@ -592,19 +838,189 @@ video {
     color: #7b7a79;
 }
 
-.popspan {
-    background-color: #e9ddbb;
-    margin-top: -35px;
-    padding: 5px 35px;
-    width: 868px;
-    height: 20px;
-}
-
 #resume {
     background-color: #e9ddbb;
     color: #7b7a79;
     font-size: 12px;
+    position: absolute;
+    top: 99%;
+    left: 3.5%;
+    padding: 3px;
 }
+
+
+/* POPUP SMALL SCREEN */
+@media (max-width: 768px) {
+    .social {
+        margin-bottom: 10px;
+    }
+
+    .popup {
+        width: 86%;
+        max-width: none;
+        margin-top: -100px;
+        left: 7%;
+        transform: none;
+        height: auto;
+        font-size: 14px;
+        border: 1px red solid;
+        overflow: hidden;
+    }
+
+    .popup-form {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 2px;
+        max-width: none;
+    }
+
+    .pop-container {
+        display: flex;
+        width: 100%;
+    }
+
+    .pop-container {
+        gap: 18px;
+    }
+
+    .pop-small {
+        display: flex;
+        background-color: transparent;
+        gap: 20px;
+        margin-right: 0;
+        border: 1px red solid;
+    }
+
+    .pop {
+        padding: 5px;
+        margin-top: 18px;
+    }
+
+    #dk figcaption {
+        font-size: 14px;
+    }
+    
+    .pop-name {
+        width: 110%;
+        font-size: 12px;
+    }
+    
+    .pop-work {
+        width: 107%;
+        font-size: 12px;
+    }
+    
+    .pop-email {
+        width: 155%;
+        font-size: 12px;
+    }
+
+    .pop-btns {
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+        align-items: end;
+        margin-right: 5px;
+    }
+
+    .pop-btns button[type="submit"] {
+        font-size: 10px;
+        padding: 3px 6px;
+    }
+
+    #resume {
+        font-size: 9px;
+        top: 70%;
+        left: 7%;
+    }
+}
+
+
+/* SCROLL BTNS */
+.scroll1 span, .scroll2 span, .scroll3 span, .scroll4 span {
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-bottom: 1px solid #e5daa4;
+    border-right: 1px solid #e5daa4;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: scroll 2s infinite;
+}
+
+#about, #skills, #projects {
+    scroll-margin-top: 0px;
+}
+
+#contact {
+    scroll-margin-top: 50px;
+}
+
+.scroll1 {
+    position: relative;
+    bottom: -70px;
+    left: 0;
+    transform: translateX(-50%);
+    z-index: 2;
+    max-height: calc(100vh - 75px);
+}
+
+.scroll2 {
+    position: relative;
+    bottom: -68px;
+    left: 0;
+    transform: translateX(-50%);
+    z-index: 2;
+    max-height: calc(100vh - 75px);
+}
+
+.scroll3 {
+    position: relative;
+    bottom: -28px;
+    left: 0;
+    transform: translateX(-50%);
+    z-index: 2;
+    max-height: calc(100vh - 75px);
+}
+
+.scroll4 {
+    position: relative;
+    bottom: 1px;
+    left: 0;
+    transform: translateX(-50%);
+    z-index: 2;
+    max-height: calc(100vh - 75px);
+}
+
+
+/* SCROLL BTNS SMALL SCREEN */
+@media (max-width: 768px) {
+    .scroll1, .scroll2, .scroll3, .scroll4 {
+        display: none;
+    }
+
+    .scroll1 span, .scroll2 span, .scroll3 span, .scroll4 span {
+        display: none;
+    }
+
+    #about {
+        scroll-margin-top: -55px;
+    }
+
+    #skills {
+        scroll-margin-top: -50px;
+    }
+
+    #projects {
+        scroll-margin-top: 115px;
+    }
+
+    #contact {
+        scroll-margin-top: 60px;
+    }
+}
+
 
 /* FOOTER */
 .foot {
@@ -613,4 +1029,12 @@ video {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 768px) {
+    .foot {
+        height: 100%;
+        font-size: 10px;
+        padding: 10px;
+    }
 }
