--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,9 @@ html {
 }
 
 video {
-    height: 90px;
-    width: auto;
+    width: 100%;
+    height: 100%;
 }
-
 
 /* NAV BAR */
 header {
@@ -37,6 +36,7 @@ header {
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     position: fixed;
     top: 0;
     width: 100%;
@@ -46,11 +46,17 @@ nav {
     margin-left: 20px;
     margin-top: 5px;
     padding: 5px;
+    width: 25%;
+    max-width: 30vw;
+}
+
+.logo video {
+    object-fit: cover;
 }
 
 .nav-links {
     color: #e5daa4;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-weight: 100px;
     display: flex;
     align-items: flex-end;
@@ -60,26 +66,27 @@ nav {
     padding-right: 20px;
 }
 
+.nav-links a:hover {
+    color: lightgray;
+}
+
 .nav-links a {
     text-decoration: none;
 }
 
-
-/* NAV BAR SMALL SCREEN */
-@media (max-width: 768px) {
-    .nav-links {
-        font-size: 15px;
-    }
-
-    video {
-        height: 70px;
-        width: auto;
-    }
+.toggle-button {
+    display: none;
+    position: absolute;
+    top: 35px;
+    right: 5%;
+    width: 30px;
+    height: 21px;
 }
 
 
 /* HERO */
 .hero {
+    margin-top: 25px;
     height: 100vh;
     position: relative;
     z-index: 1;
@@ -90,105 +97,48 @@ nav {
 }
 
 .hero-content {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    gap: 120px;
+    padding: 40px;
+    gap: 90px;
 }
 
 .hero img {
-    height: 425px;
-    width: auto;
-    margin-top: -50px;
+    height: auto;
+    width: 90%;
+    margin-left: 25px;
+}
+
+.hero-img {
+    width: 35%;
 }
 
 .hero-txt {
     display: flex;
     flex-direction: column;
-    margin-top: -125px;
+    margin-top: -115px;
+    width: 50%;
 }
 
 .hero-txt h1 {
-    font-size: 80px;
+    font-size: 6vw;
     font-weight: 400;
 }
 
 
 /* TYPEWRITING TEXT */
-.type .dynamic-txts{
-    margin-top: 1px;
-    height: 90px;
-    width: 400px;
-    line-height: 90px;
-    overflow: hidden;
-}
-
-.dynamic-txts li{
-    list-style: none;
+.typewrite{
     color: #e5daa4;
-    font-size: 60px;
+    font-size: 4vw;
     font-weight: 100;
-    position: relative;
-    top: 0;
-    animation: slide 15s steps(5) infinite;
+    border-right: 1px solid #e5daa4;
+    cursor: initial;
 }
 
-@keyframes slide {
-    100%{
-      top: -450px;
-    }
-}
-
-.dynamic-txts li span{
-    position: relative;
-    margin: 5px 0;
-    line-height: 80px;
-}
-  
-.dynamic-txts li span::after{
-    content: "";
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: #000;
-    border-left: 2px solid #e5daa4;
-    animation: typing 3s steps(10) infinite;
-}
-  
-@keyframes typing {
-    40%, 60%{
-      left: calc(100% + 30px);
-    }
-    100%{
-      left: 0;
-    }
-}
-
-
-/* HERO SMALL SCREEN */
-@media (max-width: 768px) {
-   .hero-content {
-        flex-direction: column;
-        text-align: center;
-        padding: 20px;
-        gap: 20px;
-    }
-
-    .hero img {
-        height: auto;
-        max-width: 80%;
-        margin-top: 100px;
-    }
-
-    .hero-txt {
-        margin-top: 20px;
-    }
-
-    .hero-txt h1 {
-        font-size: 40px;
-    }
+.typewrite {
+    text-decoration: none;
 }
 
 
@@ -202,76 +152,37 @@ nav {
 
 .about-content {
     display: flex;
-    flex-wrap: wrap;
-    gap: 100px;
-    max-width: 98vw;
-    margin-top: 100px;
+    gap: 125px;
+    width: 90%;
     padding: 50px;
 }
 
 .about-txt {
-    flex: 1;
     display: flex;
     flex-direction: column;
     margin-left: 20px;
-    min-width: 400px;
+    width: 60%;
 }
 
 .about h3 {
-    font-size: 75px;
+    font-size: 5vw;
     font-weight: 400;
     padding-bottom: 20px;
 }
 
 .about p {
-    font-size: 18px;
-    max-width: 605px;
+    font-size: 1.3vw;
 }
 
 .about-pic {
-    max-width: 550px;
+    width: 50%;
+    margin-top: 10px;
 }
 
 .about-pic img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-}
-
-/* ABOUT SMALL SCREEN */
-@media (max-width: 768px) {
-    .about {
-        margin-top: -100px;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-
-    .about-content {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 25px;
-    }
-
-    .about-txt {
-        flex: none;
-        max-width: 100%;
-    }
-
-    .about h3 {
-        font-size: 36px;
-    }
-
-    .about p {
-        font-size: 14px;
-    }
-
-    .about-pic img {
-        height: auto;
-        max-width: 80%;
-        margin-left: 50px;
-    }
 }
 
 
@@ -325,27 +236,6 @@ nav {
     text-align: center;
     font-size: 20px;
     margin-top: 40px;
-}
-
-
-/* SKILLS SMALL SCREEN */
-@media (max-width: 768px) {
-    .skills {
-        padding: 20px;
-        margin-top: 105px;
-    }
-
-    .skills h3 {
-        font-size: 40px;
-    }
-
-    .skill-container {
-        gap: 30px;
-    }
-
-    .skill img, .learn img {
-        height: 60px;
-    }
 }
 
 
@@ -411,33 +301,7 @@ nav {
 
 /* PROJECT SMALL SCREEN */
 @media (max-width: 768px) {
-    .projects {
-        margin-top: -30px;
-        text-align: center;
-    }
-
-    .project-content {
-        margin-top: -20px;
-    }
-
-    .project-content h3 {
-        font-size: 40px;
-        padding-bottom: 0px;
-    }
-
-    .project-container {
-        flex-direction: column; 
-        gap: 40px;
-    }
-
-    .project img {
-        width: 90%;
-        max-width: 400px; 
-    }
-
-    .project figcaption {
-        font-size: 20px;
-    }
+    
 }
 
 
@@ -503,7 +367,7 @@ nav {
 
 .row-one {
     display: flex;
-    gap: 285px;
+    gap: 75px;
     position: absolute;
     top: 0;
     left: 0;
@@ -512,12 +376,13 @@ nav {
 }
 
 .name-cont {
+    position: relative;
+    width: 50%;
     padding-left: 10px;
 }
 
 .name {
-    position: absolute;
-    width: 32%;
+    width: 100%;
     font-size: 18px;
 }
 
@@ -528,9 +393,14 @@ nav {
     border-bottom: 1.5px solid #181510;
 }
 
+.email-cont {
+    position: relative;
+    width: 75%;
+}
+
 .email {
-    position: absolute;
-    width: 47%;
+    position: relative;
+    width: 100%;
     font-size: 18px;
 }
 
@@ -552,10 +422,9 @@ nav {
     padding: 40px;
 }
 
-
 .msg {
-    position: absolute;
-    width: 88%;
+    position: relative;
+    width: 98.9%;
     font-size: 18px;
     margin-left: 10px;
 }
@@ -570,7 +439,7 @@ nav {
     padding-top: 15px;
     border: none;
     border-bottom: 1.5px solid #181510;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 #thx {
@@ -633,96 +502,6 @@ nav {
     border: none;
     cursor: pointer;
 }
-
-
-/* CONTACT SMALL SCREEN */
-@media (max-width: 768px) {
-    .contact h3 {
-        font-size: 40px;
-        padding-bottom: 0px;
-    }
-
-    .msg-container {
-        width: 90%;
-        height: 35vh;
-        max-width: none;
-        overflow: hidden;
-        padding: 10px;
-    }
-
-    .msg-container h5 {
-        font-size: 28px;
-    }
-
-    .form-container {
-        width: 90%;
-        max-width: 90%;
-        height: 100%;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .row-one, .row-two, .row-three {
-        width: 100%;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .row-one {
-        flex-direction: row;
-        justify-content: flex-start;
-    }
-
-    .name, .email {
-        flex: 1;
-        font-size: 14px;
-    }
-
-    .email-cont {
-        margin-left: -100px;
-    }
-
-    .row-two {
-        margin-top: 10px;
-    }
-
-    .row-two input[type="text"] {
-        padding-top: 8px;
-    }
-
-    .msg {
-        width: 99%;
-        font-size: 14px;
-    }
-
-    #thx {
-        font-size: 14px;
-        left: 1;
-        margin-left: -6px;
-    }
-
-    .row-three {
-        width: 10%;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        margin-top: -8px;
-        margin-left: 12px;
-    }
-
-    .row-three button[type="submit"] {
-        font-size: 16px;
-        padding: 6px 12px;
-    }
-
-    .icon i {
-        font-size: 20px;
-    }
-}
-
 
 
 /* POP-UP */
@@ -850,94 +629,6 @@ nav {
 }
 
 
-/* POPUP SMALL SCREEN */
-@media (max-width: 768px) {
-    .social {
-        margin-bottom: 10px;
-    }
-
-    .popup {
-        width: 86%;
-        max-width: none;
-        margin-top: -100px;
-        left: 7%;
-        transform: none;
-        height: auto;
-        font-size: 14px;
-        border: 1px red solid;
-        overflow: hidden;
-    }
-
-    .popup-form {
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        padding: 2px;
-        max-width: none;
-    }
-
-    .pop-container {
-        display: flex;
-        width: 100%;
-    }
-
-    .pop-container {
-        gap: 18px;
-    }
-
-    .pop-small {
-        display: flex;
-        background-color: transparent;
-        gap: 20px;
-        margin-right: 0;
-        border: 1px red solid;
-    }
-
-    .pop {
-        padding: 5px;
-        margin-top: 18px;
-    }
-
-    #dk figcaption {
-        font-size: 14px;
-    }
-    
-    .pop-name {
-        width: 110%;
-        font-size: 12px;
-    }
-    
-    .pop-work {
-        width: 107%;
-        font-size: 12px;
-    }
-    
-    .pop-email {
-        width: 155%;
-        font-size: 12px;
-    }
-
-    .pop-btns {
-        display: flex;
-        flex-direction: column;
-        gap: 60px;
-        align-items: end;
-        margin-right: 5px;
-    }
-
-    .pop-btns button[type="submit"] {
-        font-size: 10px;
-        padding: 3px 6px;
-    }
-
-    #resume {
-        font-size: 9px;
-        top: 70%;
-        left: 7%;
-    }
-}
-
-
 /* SCROLL BTNS */
 .scroll1 span, .scroll2 span, .scroll3 span, .scroll4 span {
     display: block;
@@ -948,10 +639,11 @@ nav {
     transform: rotate(45deg);
     margin: -10px;
     animation: scroll 2s infinite;
+    margin-bottom: 25px;
 }
 
 #about, #skills, #projects {
-    scroll-margin-top: 0px;
+    scroll-margin-top: 125px;
 }
 
 #contact {
@@ -960,7 +652,7 @@ nav {
 
 .scroll1 {
     position: relative;
-    bottom: -70px;
+    top: 5%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
@@ -969,7 +661,7 @@ nav {
 
 .scroll2 {
     position: relative;
-    bottom: -68px;
+    top: 6%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
@@ -995,34 +687,6 @@ nav {
 }
 
 
-/* SCROLL BTNS SMALL SCREEN */
-@media (max-width: 768px) {
-    .scroll1, .scroll2, .scroll3, .scroll4 {
-        display: none;
-    }
-
-    .scroll1 span, .scroll2 span, .scroll3 span, .scroll4 span {
-        display: none;
-    }
-
-    #about {
-        scroll-margin-top: -55px;
-    }
-
-    #skills {
-        scroll-margin-top: -50px;
-    }
-
-    #projects {
-        scroll-margin-top: 115px;
-    }
-
-    #contact {
-        scroll-margin-top: 60px;
-    }
-}
-
-
 /* FOOTER */
 .foot {
     height: 75px;
@@ -1032,10 +696,3 @@ nav {
     align-items: center;
 }
 
-@media (max-width: 768px) {
-    .foot {
-        height: 100%;
-        font-size: 10px;
-        padding: 10px;
-    }
-}
