--- a/response.css
+++ b/response.css
@@ -431,13 +431,20 @@
     }
 
     .scroll1 {
-        top: 15%;
+        top: 17%;
     }
 
     .scroll2 {
-        top: 14%;
+        top: 16%;
     }
 
+    .scroll3 {
+        top: 8.3%;
+    }
+
+    .scroll4 {
+        top: 9%;
+    }
 }
 
 /* MOBILE SCREEN SIZE */
