--- a/styles.css
+++ b/styles.css
@@ -97,12 +97,12 @@ nav {
 }
 
 .hero-content {
-    width: 100%;
+    width: 93%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 40px;
-    gap: 90px;
+    gap: 120px;
 }
 
 .hero img {
@@ -112,14 +112,14 @@ nav {
 }
 
 .hero-img {
-    width: 35%;
+    width: 37%;
 }
 
 .hero-txt {
     display: flex;
     flex-direction: column;
     margin-top: -115px;
-    width: 50%;
+    width: 60%;
 }
 
 .hero-txt h1 {
@@ -144,7 +144,7 @@ nav {
 
 /* ABOUT SECTION */
 .about {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -188,11 +188,12 @@ nav {
 
 /* SKILLS SECTION */
 .skills {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 0px;
 }
 
 .skill-content {
@@ -215,33 +216,37 @@ nav {
     padding-bottom: 15px;
 }
 
+.skill, .learn {
+    width: 15%;
+}
+
 .skills h3 {
-    font-size: 75px;
+    font-size: 5vw;
     font-weight: 400;
     padding-bottom: 20px;
 }
 
 .skill img, .learn img {
-    height: 80px;
-    width: auto;
+    width: 40%;
+    height: auto;
 }
 
 .skill figcaption, .learn figcaption {
     margin-top: 10px;
+    font-size: 1.5vw;
 }
 
 .img-container {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
-    font-size: 20px;
     margin-top: 40px;
 }
 
 
 /* PROJECT SECTION */
 .projects {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -258,13 +263,14 @@ nav {
 }
 
 .project-content h3 {
-    font-size: 75px;
+    font-size: 5vw;
     font-weight: 400;
     text-align: center;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
 }
 
 .project-container {
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -277,7 +283,7 @@ nav {
 }
 
 .project img {
-    width: 500px;
+    width: 80%;
     height: auto;
     border-radius: 10px;
     border: 1.5px solid #e5daa4;
@@ -290,18 +296,12 @@ nav {
 .project figcaption {
     margin-top: 30px;
     text-align: center;
-    font-size: 25px;
+    font-size: 1.9vw;
 }
 
 .project:hover img {
     -webkit-transform: scale(1.2);
 	transform: scale(1.2);
-}
-
-
-/* PROJECT SMALL SCREEN */
-@media (max-width: 768px) {
-    
 }
 
 
@@ -642,8 +642,16 @@ nav {
     margin-bottom: 25px;
 }
 
-#about, #skills, #projects {
+#about {
     scroll-margin-top: 125px;
+}
+
+#skills {
+    scroll-margin-top: 75px;
+}
+
+#projects {
+    scroll-margin-top: 45px;
 }
 
 #contact {
@@ -652,7 +660,7 @@ nav {
 
 .scroll1 {
     position: relative;
-    top: 5%;
+    top: 7%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
@@ -661,7 +669,7 @@ nav {
 
 .scroll2 {
     position: relative;
-    top: 6%;
+    top: 7%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
@@ -670,7 +678,7 @@ nav {
 
 .scroll3 {
     position: relative;
-    bottom: -28px;
+    top: 3%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
@@ -679,7 +687,7 @@ nav {
 
 .scroll4 {
     position: relative;
-    bottom: 1px;
+    bottom: 1.1%;
     left: 0;
     transform: translateX(-50%);
     z-index: 2;
